<resources>
    <string name="app_name">tjodexCar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Logar</string>
    <string name="perfil">Perfil</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="preco">Preço</string>
    <string name="politica">Politica de Privacidade</string>
    <string name="sair">Sair</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="rg">RG</string>
    <string name="HondaCivic">Honda Civic</string>
    <string name="HondaCivicAno">2012</string>
    <string name="HondaCivicPreco">54.640</string>
    <string name="HondaCivicKm">49.900</string>
    <string name="HondaCivicCambio">automatico</string>
    <string name="HondaCivicCarroceria">sedã</string>
    <string name="HondaCivicCombustivel">flex</string>
    <string name="HondaCivicPlaca">8</string>
    <string name="HondaCivicCor">Preto</string>
    <string name="HondaCivicIpvaPago">ipvaPago</string>
    <string name="HondaCivicIpvaEstoue">4</string>
</resources>