<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Cadastrar">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tlCadastrarTxtLogin"
              android:hint="@string/login"
              android:layout_margin="10dp"
              android:inputType="text"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tlCadastrarTxtSenha"
              android:hint="@string/senha"
              android:layout_margin="10dp"
              android:inputType="textPassword"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlCadastrarTxtNome"
            android:hint="@string/nome"
            android:layout_margin="10dp"
            android:inputType="text"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlCadastrarTxtCPF"
            android:hint="@string/cpf"
            android:layout_margin="10dp"
            android:inputType="text"
    />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tlCadastrarTxtRG"
                android:hint="@string/rg"
                android:layout_margin="10dp"
                android:inputType="text"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contato"
            android:layout_margin="10dp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlCadastrarTxtTelefone"
            android:inputType="phone"
            android:layout_margin="10dp"
            android:hint="@string/telefone"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tlCadastrarTxtEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_margin="10dp"
    />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Endereço"
                android:layout_margin="10dp"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:id="@+id/tlCadastrarTxtEndereco"
                android:layout_margin="10dp"
                android:inputType="text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:layout_margin="10dp"
                android:inputType="text"
                android:id="@+id/tlCadastrarTxtNumero"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complemento"
                android:id="@+id/tlCadastrarTxtComplemento"
                android:layout_margin="10dp"
                android:inputType="text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:id="@+id/tlCadastrarTxtCep"
                android:layout_margin="10dp"
                android:inputType="number"
                android:maxLength="8"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:id="@+id/tlCadastrarTxtBairro"
                android:layout_margin="10dp"
                android:inputType="text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:id="@+id/tlCadastrarTxtCidade"
                android:layout_margin="10dp"
                android:inputType="text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:id="@+id/tlCadastrarTxtEstado"
                android:layout_margin="10dp"
                android:inputType="text"
                android:maxLength="2"
        />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tlCadastrarBtnCadastrar"
                android:text="@string/cadastrar"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/cinza"
                android:textColor="@color/branco"
        />

    </LinearLayout>

</ScrollView>